--- a/index.html
+++ b/index.html
@@ -51,11 +51,15 @@
         <!-- here li list are coming from js -->
       </ul>
     </div>
+    <footer>
+      <p>Author: Gaby Ugarte<br>
+    </footer>
   </div>
 
   <script src="js/music-list.js"></script>
   <script src="js/script.js"></script>
 
 </body>
+
 </html>
 
